--- a/web.html
+++ b/web.html
@@ -9,6 +9,10 @@
     <!--ADD SOUND (MAYBE)--> 
 </head>
 <body>
+
+    <!--Background-->
+    <img src="/images/black card background.jfif" style="width:device-width, initial-scale=1.0">
+
     <h1>
         <b>Welcome!</b>
     </h1>
