--- a/web.html
+++ b/web.html
@@ -7,12 +7,18 @@
     <meta name = "title page" content ="width = device-width, initial-scale=1.0">
     <meta name = "keywords" content = "HTML,CSS">
     <!--ADD SOUND (MAYBE)--> 
+    <style>
+        body{
+            background-image: url('/images/red_background.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </style> 
 </head>
+
 <body>
-
-    <!--Background-->
-    <img src="/images/black card background.jfif" style="width:device-width, initial-scale=1.0">
-
+   
     <h1>
         <b>Welcome!</b>
     </h1>
