--- a/web.html
+++ b/web.html
@@ -19,10 +19,10 @@
 
 <body>
    
-    <h1>
+    <h1 style = "color:whitesmoke; text-align: center;">
         <b>Welcome!</b>
     </h1>
-    <p>
+    <p style = "color: whitesmoke; text-align: center;">
         Which game would you lke to play?
     </p>
 
