--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <html lang="en">
 <head>
-    <title> Log in or Sign Up! </title>
+    <title> Homepage </title>
     <meta charset = "UTF-8">
     <meta name = "title page" content ="width = device-width, initial-scale=1.0">
     <meta name = "keywords" content = "HTML,CSS">
