--- a/lobby.html
+++ b/lobby.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Lobby</title>
+    <style>
+        body{
+            background-image: url('/images/red_background.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+        label{
+            color: whitesmoke;
+            display: block;
+        }
+        div{
+            padding-left: 50px;
+        }
+        
+    </style> 
 </head>
 <body>
-    <h1 style="color:blueviolet; text-align: center; font-family: 'Courier New', Courier, monospace;">GAME LOBBY</h1>
-    </script>
+    <h1 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">Game Lobby</h1>
+   
+
+
+    <button onClick="myFunction()" > Create Room</button>
+    <button onClick="myFunction()" > Join Room</button>
+<script>
+    function myFunction() {
+        alert("testing");
+    }
+</script>
 </body>
 </html>
