--- a/signup.html
+++ b/signup.html
@@ -5,31 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Account Page</title>
+    <style>
+        body{
+            background-image: url('/images/red_background.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+        label{
+            color: whitesmoke;
+            display: block;
+        }
+        div{
+            padding-left: 50px;
+        }
+        
+    </style> 
 </head>
 <body>
-    <h1 style="color:blueviolet; text-align: center; font-family: 'Courier New', Courier, monospace;">CREATE ACCOUNT</h1>
+    <h1 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">Create Account</h1>
     <br>
 </br>
-<h4 style="color:blueviolet; text-align: center; font-family: 'Courier New', Courier, monospace;">create username:</h4style>
+<h4 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">create username:</h4style>
 <input type="text" id="myText">
     <br>
 </br>
-<h4 style="color:blueviolet; text-align: center; font-family: 'Courier New', Courier, monospace;">create password:</h4style>
+<h4 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">create password:</h4style>
     <input>
     <br>
 </br>
-<h4 style="color:blueviolet; text-align: center; font-family: 'Courier New', Courier, monospace;">re-enter password:</h4style>
+<h4 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">re-type password:</h4style>
     <input>
     <br>
 </br>
-<h4 style="color:blueviolet; text-align: center; font-family: 'Courier New', Courier, monospace;">email address:</h4style>
+<h4 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">email address:</h4style>
     <input>
     <br>
 </br>
 
 <button onClick="myFunction()" > Submit</button>
     
- <!--NOT CENTERED PROPERLY--> 
+ <!--NOT ALIGNED PROPERLY--> 
+ <br></br>  <br></br>  <br></br>  <br></br>  <br></br>  
+        <form>
+            <a href="login.html">
+                <input type="button" value="Login">
+            </a>
+        </form>
 
     <script>
         function myFunction() {
