--- a/account.html
+++ b/account.html
@@ -38,10 +38,10 @@
 
     <img src="/images/Prof Pic.jpg">
     <br></br>
-    <p style="color: whitesmoke; text-align: center;"> Username: </p>
+    <p style="color: whitesmoke; text-align: center;"><b>Username:</b></p>
     <p style="color: whitesmoke; text-align: center;"> ******** Insert Username Here ********</p>
-    <p style="color: whitesmoke; text-align: center;"> Games Played: </p>
+    <p style="color: whitesmoke; text-align: center;"><b>Games Played:</b></p>
     <p style="color: whitesmoke; text-align: center;"> ******** Insert Games Played Here ********</p>
-    <p style="color: whitesmoke; text-align: center;"> Wins: </p>
+    <p style="color: whitesmoke; text-align: center;"><b>Wins:</b></p>
     <p style="color: whitesmoke; text-align: center;"> ******** Insert Wins Here ********</p>
 </body>
