--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
 <head>
     <title> My Account </title>
     <meta charset = "UTF-8">
-    <meta name = "title page" content ="width = device-width, initial-scale=1.0">
+    <meta name = "account page" content ="width = device-width, initial-scale=1.0">
     <meta name = "keywords" content = "HTML,CSS">
     <!--ADD SOUND (MAYBE)--> 
     <style>
