--- a/lobby.html
+++ b/lobby.html
@@ -11,6 +11,7 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
+            text-align: center;
         }
         label{
             color: whitesmoke;
@@ -33,6 +34,7 @@
     function myFunction() {
         alert("testing");
     }
+    
 </script>
 </body>
 </html>
