buttons aligned & look better accessibility ?

--- a/lobby.html
+++ b/lobby.html
@@ -11,7 +11,6 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
-            text-align: center;
         }
         label{
             color: whitesmoke;
@@ -24,12 +23,41 @@
     </style> 
 </head>
 <body>
+    <header>
+        <form>
+          <a href="test.html">
+          <input type="button" value="Home">
+          </a>
+  
+      <a href="login.html">
+          <span style="float: right"><input type="button" value="Login"></span>
+      </a>
+          <a href="signup.html">
+              <span style="float: right"><input type="button" value="Signup"></span>
+            
+          </a>
+  </form>
+ 
     <h1 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">Game Lobby</h1>
    
+</header>
 
+<style>
+  button{
+    /*Change the width as much as you like, but make sure 
+    margin-left and margin-right + width = 100%*/
+    width:10%;
+    margin-left:45%;
+    margin-right:45%;
+}
+</style>
 
-    <button onClick="myFunction()" > Create Room</button>
+    <button onClick="myFunction()"> 
+        Create Room</button>
     <button onClick="myFunction()" > Join Room</button>
+
+
+
 <script>
     function myFunction() {
         alert("testing");
@@ -37,4 +65,5 @@
     
 </script>
 </body>
+
 </html>
