--- a/test.html
+++ b/test.html
@@ -36,19 +36,16 @@
 </br>
     <form>
         <a href="login.html">
-            <input type="button" value="Login">
+            <input type="button" value="Login" style="padding-left: 2.5%; padding-right: 2.5%;">
         </a>
-    </form>
     <br>
 </br>
-    <form>
         <a href="signup.html">
-            <input type="button" value="Sign Up">
+            <input type="button" value="Sign Up" style="padding-left: 1.9%; padding-right: 1.9%;">
         </a>
-    </form>
+
     <br>
 </br>
-    <form>
         <a href="lobby.html">
             <input type="button" value="Play as Guest">
         </a>
@@ -58,6 +55,12 @@
 <br></br>
 <br></br>
 <br></br>
+
+
+
+
+  <!--THIS IS A TEST can be moved or deleted?--> 
+
 
     <h5> (response test)</h5>
     <input id="test">
@@ -74,11 +77,15 @@
         }
     </script>
     
-
-    <style>
-        body{
+<style>
+    form{
         text-align: center;
-        }
-    </style>
+      margin: 0 auto;
+      width: 100%;
+      box-sizing: border-box;
+    }
+  
+</style>
     
 </body>
+</html>
