combined with web.html

--- a/lobby.html
+++ b/lobby.html
@@ -38,7 +38,12 @@
           </a>
   </form>
  
-    <h1 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">Game Lobby</h1>
+  <h1 style = "color:whitesmoke; text-align: center;">
+    <b>Welcome!</b>
+</h1>
+<p style = "color: whitesmoke; text-align: center;">
+    Which game would you lke to play?
+</p>
    
 </header>
 
