--- a/lobby.html
+++ b/lobby.html
@@ -42,7 +42,7 @@
     <b>Welcome!</b>
 </h1>
 <p style = "color: whitesmoke; text-align: center;">
-    Which game would you lke to play?
+    Start or Join a Game!
 </p>
    
 </header>
