--- a/GameSelect.html
+++ b/GameSelect.html
@@ -5,11 +5,13 @@
     <body>
         <h1>Create Room</h1>
         <input type="button" value="War">
+        <input type="button" value="Slapjack">
         <input type="button" value="Egyptian Rat Screw">
 
         <style>
             h1 {
                 text-align: center;
+                color: whitesmoke;                
             }
 
             body {
@@ -24,19 +26,12 @@
             }
 
             button, input[type=button] {
-                padding: 1em 2em;
-                font-size: 1.2em; font-weight: bold;
-                border: 4px solid rgb(255, 255, 255);
-                border-radius: 4px;
-                background-color: rgb(255, 0, 0);
                 width:20%;
+                margin-bottom: 10px;
                 margin-left:40%;
                 margin-right:40%;
             }
 
-            button:hover, input[type=button]:hover {
-                background-color: rgb(107, 0, 0);
-            }
         </style>
         <script>
             function myFunction() {
