--- a/public/index.html
+++ b/public/index.html
@@ -36,17 +36,10 @@
 
 		<header>
 			<form>
-			  <a href="test.html">
-			  <input type="button" value="Home">
-			  </a>
-	  
-		  		 <a href="login.html">
-			  	 	<span style="float: right"><input type="button" value="Login"></span>
-		 		 </a>
-			  	 <a href="signup.html">
-				 	<span style="float: right"><input type="button" value="Signup"></span>
-			  	 </a>
-	  		</form>
+				<input type="button" value="Home">
+				<span style="float: right"><button id="signUp"> signUp </button></span>
+				<span style="float: right"><input type="button" value="signUp"></span>
+		</form>
 	 
 	  		<h1 style = "color:whitesmoke; text-align: center;">
 				<b>Welcome!</b>
@@ -86,10 +79,6 @@
 
 	<script id="signUp" type="text/template">
 		<head>
-			<meta charset="UTF-8">
-			<meta http-equiv="X-UA-Compatible" content="IE=edge">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Create Account Page</title>
 			<style>
 				body{
 					background-image: url('/images/red_background.jpg');
