--- a/GameSelect.html
+++ b/GameSelect.html
@@ -3,10 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Create Room</h1>
-        <input type="button" value="War">
-        <input type="button" value="Slapjack">
-        <input type="button" value="Egyptian Rat Screw">
+        <h1>Game Select</h1>
 
         <style>
             h1 {
@@ -26,13 +23,22 @@
             }
 
             button, input[type=button] {
-                width:20%;
+                padding: 5px 10px;
+                width:10%;
                 margin-bottom: 10px;
-                margin-left:40%;
-                margin-right:40%;
+                margin-left:45%;
+                margin-right:45%;
             }
 
         </style>
+
+        <button onClick="myFunction()"> War </button>
+        <button onClick="myFunction()" > Slapjack </button>
+        <button onClick="myFunction()" > Egyptian Rat Screw </button>
+        <a href="lobby.html">
+            <input type="button" value="Return">
+        </a>
+
         <script>
             function myFunction() {
                 alert("Test");
