--- a/lobby.html
+++ b/lobby.html
@@ -37,10 +37,10 @@
             
           </a>
   </form>
- 
   <h1 style = "color:whitesmoke; text-align: center;">
     <b>Welcome!</b>
 </h1>
+
 <p style = "color: whitesmoke; text-align: center;">
     Start or Join a Game!
 </p>
@@ -51,21 +51,25 @@
   button{
     /*Change the width as much as you like, but make sure 
     margin-left and margin-right + width = 100%*/
+    padding: 5px 10px;
     width:10%;
+    margin-bottom: 10px;
     margin-left:45%;
     margin-right:45%;
 }
 </style>
-
-    <button onClick="myFunction()"> 
-        Create Room</button>
-    <button onClick="myFunction()" > Join Room</button>
+    <button onClick="gsLink()" > Create Room </button>
+    <button onClick="myFunction()" > Join Room </button>
 
 
 
 <script>
     function myFunction() {
         alert("testing");
+    }
+
+    function gsLink() {
+        window.location="GameSelect.html";
     }
     
 </script>
