--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 			<form>
 				<input type="button" value="Home">
 				<span style="float: right"><button id="signUp"> signUp </button></span>
-				<span style="float: right"><input type="button" value="signUp"></span>
+				<span style="float: right"><button id="login"> login </button></span>
 		</form>
 	 
 	  		<h1 style = "color:whitesmoke; text-align: center;">
@@ -154,12 +154,42 @@
 		</body>
 	</script>
 
+	<script id = "login" type = "text/template"> 
+		<head>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width,minimum-scale=1">
+			<title>Login</title>
+			<!-- the form awesome library is used to add icons to our form -->
+			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+			<!-- include the stylesheet file -->
+			<link href="/style.css" rel="stylesheet" type="text/css">
+		</head>
+		<body>
+			<div class="login">
+				<h1>Login</h1>
+				<form action="/auth" method="post">
+					<label for="username">
+						<!-- font awesome icon -->
+						<i class="fas fa-user"></i>
+					</label>
+					<input type="text" name="username" placeholder="Username" id="username" required>
+					<label for="password">
+						<i class="fas fa-lock"></i>
+					</label>
+					<input type="password" name="password" placeholder="Password" id="password" required>
+					<input type="submit" value="Login">
+				</form>
+			</div>
+		</body>
+	</script>
+
 	<script id="playerSetsName" type="text/template">
 		<h1>Player Name</h1>
 		<p>Wait for other players</p>
 	</script>
 
 	<script id="playerWaitingScreen" type="text/template">
+		<h1> Waiting For Game To Start </h1>>
 		<p id="playerName"> </p>
 		<div id="startInject"></div>
 	</script>
