--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,45 @@
 		<button id="quit">quit</button>
 	</script>
 
-
+	<script id="gameSelect" type="text/template">
+		<body>
+			<h1>Game Select</h1>
+	
+			<style>
+				h1 {
+					text-align: center;
+					color: whitesmoke;                
+				}
+	
+				body {
+					background-image: url('/images/red_background.jpg');
+					background-repeat: no-repeat;
+					background-attachment: fixed;
+					background-size: cover;
+				}
+	
+				div {
+					padding-left: 50px;
+				}
+	
+				button, input[type=button] {
+					padding: 5px 10px;
+					width:10%;
+					margin-bottom: 10px;
+					margin-left:45%;
+					margin-right:45%;
+				}
+	
+			</style>
+	
+			<button onClick="myFunction()"> War </button>
+			<button onClick="myFunction()" > Slapjack </button>
+			<button onClick="myFunction()" > Egyptian Rat Screw </button>
+			<a href="lobby.html">
+				<input type="button" value="Return">
+			</a>
+		</body>
+	</script>
 
 
 </body>
