--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="libs/jquery.3.6.0.js"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>->
 	<script src="app.js"></script>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
@@ -36,7 +37,6 @@
 
 		<header>
 			<form>
-				<input type="button" value="Home">
 				<span style="float: right"><button id="signUp"> signUp </button></span>
 				<span style="float: right"><button id="login"> login </button></span>
 		</form>
@@ -105,13 +105,9 @@
 		
 		  <header>
 			  <form>
-				<a href="test.html">
-					<input type="button" value="Home">
-				</a>
+				<span style="float: left"><button id="Home"> Home </button></span>
 		
-			<a href="login.html">
-				<span style="float: right"><input type="button" value="Login"></span>
-			</a>
+				<span style="float: right"><button id="login"> Login </button></span>
 				<a href="lobby.html">
 					<span style="float: right"><input type="button" value="Play as Guest"></span>
 				  
@@ -162,10 +158,16 @@
 			<!-- the form awesome library is used to add icons to our form -->
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 			<!-- include the stylesheet file -->
-			<link href="/style.css" rel="stylesheet" type="text/css">
+			<!--<link href="/style.css" rel="stylesheet" type="text/css">-->
 		</head>
 		<body>
+			<header>
+				<form>
+					<span style="float: left"><button id="Home"> Home </button></span>
+				</form>
+			</header>
 			<div class="login">
+				
 				<h1>Login</h1>
 				<form action="/auth" method="post">
 					<label for="username">
