--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 	</script>
 
 	<script id="playerJoinGame" type="text/template">
+		<header>
+			<form>
+				<span style="float: left"><button id="Home"> Home </button></span>
+			</form>
+		</header>
 		<h1>Please Enter Your Name</h1>
 			<label for="name">Enter your name</label>
 			<input type="text" id="name">
