index and style updated

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<form>
 				<span style="float: right"><button id="signUp"> signUp </button></span>
 				<span style="float: right"><button id="login"> login </button></span>
+				<span style="float: left"><button id="account"> account </button></span>
 		</form>
 	 
 	  		<h1 style = "color:whitesmoke; text-align: center;">
@@ -118,23 +119,23 @@
 		</form>
 		</header>
 			<div class = "signUp">
-			<h1 style="color:whitesmoke; text-align: center; font-family: 'Courier New', Courier, monospace;">Create Account</h1>
+			<h1 style="color:#5b6574; text-align: center; font-family: 'Courier New', Courier, monospace;"><b>Create Account</b></h1>
 		
 			 <table style="margin-left:auto;margin-right:auto;">
 				<tr>
-					<td style="color: whitesmoke;  font-family: 'Courier New', Courier, monospace;">create username:</td>
+					<td style="color: #5b6574;  font-family: 'Courier New', Courier, monospace;">create username:</td>
 					<td><input type="text1"/></td>
 				</tr>
 				 <tr>
-					<td style="color: whitesmoke;  font-family: 'Courier New', Courier, monospace;">create password:</td>
+					<td style="color: #5b6574;  font-family: 'Courier New', Courier, monospace;">create password:</td>
 					<td><input type="text2" /></td>
 				</tr>
 				<tr>
-					<td style="color: whitesmoke;  font-family: 'Courier New', Courier, monospace;">re-enter password:</td>
+					<td style="color: #5b6574;  font-family: 'Courier New', Courier, monospace;">re-enter password:</td>
 					<td><input type="text3" /></td>
 				</tr>
 				<tr>
-					<td style="color: whitesmoke;  font-family: 'Courier New', Courier, monospace;">email address:</td>
+					<td style="color: #5b6574;  font-family: 'Courier New', Courier, monospace;">email address:</td>
 					<td><input type="email" /></td>
 				</tr>
 				<tr>
@@ -219,6 +220,54 @@
 		<button id="quit">quit</button>
 	</script>
 
+
+	<script id="account" type="text/template">
+		<title> My Account </title>
+		<meta charset = "UTF-8">
+		<meta name = "title page" content ="width = device-width, initial-scale=1.0">
+		<meta name = "account page" content ="width = device-width, initial-scale=1.0">
+		<meta name = "keywords" content = "HTML,CSS">
+		<!--ADD SOUND (MAYBE)--> 
+		<style>
+			body{
+				background-image: url('/images/red_background.jpg');
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+				background-size: cover;
+			}
+			label{
+				color: whitesmoke;
+				display: block;
+			}
+			div{
+				padding-left: 50px;
+			}
+			img{
+				width: 175px;
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+			
+		</style> 
+	</head>
+	<body>
+		
+		<h1 style = "color:whitesmoke; text-align: center;">
+			<b>My Account</b>
+		</h1>
+	
+		<img src="/images/Prof Pic.jpg">
+		<br>
+		<p style="color: whitesmoke; text-align: center;"><b>Username:</b></p>
+		<p style="color: whitesmoke; text-align: center;"> ******** Insert Username Here ********</p>
+		<p style="color: whitesmoke; text-align: center;"><b>Games Played:</b></p>
+		<p style="color: whitesmoke; text-align: center;"> ******** Insert Games Played Here ********</p>
+		<p style="color: whitesmoke; text-align: center;"><b>Wins:</b></p>
+		<p style="color: whitesmoke; text-align: center;"> ******** Insert Wins Here ********</p>
+	</body>
+
+	</script>
 
 
 
