--- a/public/index.html
+++ b/public/index.html
@@ -162,6 +162,7 @@
 		<h1> Waiting For Game To Start </h1>>
 		<p id="playerName"> </p>
 		<div id="startInject"></div>
+		<span style="margin-left"><button id="ready"> Everyone's In! </button></span>
 	</script>
 
 
@@ -190,6 +191,31 @@
 
 
 	</form>
+	<script id="game" type="text/template">
+		<head>
+			<style>
+				body{
+					background-image: url('/images/red_background.jpg');
+					background-repeat: no-repeat;
+					background-attachment: fixed;
+					background-size: cover;
+				}
+				label{
+					color: whitesmoke;
+					display: block;
+				}
+				div{
+					padding-left: 50px;
+				}
+		
+			</style> 
+		
+		
+		
+		</head>
+	
+		<!--where game is-->
+	</script>
 </body>
 
 </html>
